Updated portfolio for Stage two deliverables

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Project description will be updated here.
+                        The Grocery Getters mobile application will focus on providing shoppers with a way to optimize their savings and time while getting their groceries using their phone. The core service will be to create a grocery list that allow users to check what items are on clearance and on sale, then compare them to their regular prices as well as show what the grocery store has in stock by connecting through an API. The app will assist the user by showing the general location of the item they are looking for within the specified store such as the aisle number or section. The primary target users of are app are students and older individuals that like to shop for sale items or move quickly through the store.
                     </p>
                 </div>
             </div>
@@ -102,9 +102,9 @@
                     <div class="project-info">
                         <h3>Stage 2</h3>
                         <p>
-                            Stage 2 details here...
+                            For Stage Two, we narrowed down the project idea to the Grocery Getters mobile application. We performed user research by using three unique IDEO cards. The report below goes through in detail about the user research and the defined user tasks for the application.
                         </p>
-
+                        <a href="https://github.com/parkercodewong/cpsc481_teamD/blob/Stage_Two/Stage%202.pdf" download>Stage 2 Report</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
