Updated for Stage_Three deliverables

--- a/index.html
+++ b/index.html
@@ -41,11 +41,10 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>CPSC 481</h1>
-            <h2>Team D</h2>
-            <!-- <a href="#" class="btn-rounded-white">Download Resume</a> -->
+            <h1>Grocery Getters</h1>
+            <h2>CPSC 481 - Team D</h2>
+
         </div>
-        <!-- End #lead-content -->
 
         <div id="lead-overlay"></div>
 
@@ -117,9 +116,13 @@
                     <div class="project-info">
                         <h3>Stage 3</h3>
                         <p>
-                            Stage 3 details here...
-                        </p>
+                            For Stage Three, we successfully created a Lo-Fi prototype of the Grocery Getters mobile application in which we used various ideation methods such as sketching, affinity diagrams, and storyboards to help us get inspired.
+                            The report below goes in detail about our learning process since Stage Two. We also have the link to our presentation provided as well.
 
+                        </p>
+                          <a href="https://github.com/parkercodewong/cpsc481_teamD/blob/Stage_Three/Stage_Three_Report_TeamD.pdf">Stage 3 Report</a>
+                          <p></p>
+                          <a href="https://uofc-my.sharepoint.com/:p:/g/personal/parker_wong_ucalgary_ca/EdzlRzsYcI9HpBPt4YqqbSEB7uiAw2Ez-9liZrk12vKRfQ?e=2ZcnTO">Video Presentation</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -148,6 +151,7 @@
         <h2 class="heading">Tools/Applications Used</h2>
         <ul>
             <li>Adobe XD</li>
+            <li>Balsamiq</li>
         </ul>
     </div>
     <!-- End #skills -->
