Added additional web page for Stage Four

--- a/index.html
+++ b/index.html
@@ -135,9 +135,12 @@
                     <div class="project-info">
                         <h3>Stage 4</h3>
                         <p>
-                            Stage 4 details here...
+                            The main tasks for Stage Four were to create a high fidelity prototype using Adobe XD and perform heuristic evaluation. We had two members of the group be the evaluators and two others be the reviewers for this process. By doing this
+                            we learned about the rules of thumb and how well our mobile app was performing when looking at these rules. Please follow the link for more details on this stage.
                         </p>
-
+                      </p>
+                          <a href="StageFour.html">Stage 4 Details</a>
+                          <p>
                     </div>
                     <!-- End .project-info -->
                 </div>
