Updated online portfolio to include separate pages for earlier stages

--- a/StageThree.html
+++ b/StageThree.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>Stage Four</title>
+<title>Stage Three</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -22,8 +22,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
     <a href="index.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Home</a>
     <a href="StageOne.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Stage 1</a>
     <a href="StageTwo.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Stage 2</a>
-    <a href="StageThree.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Stage 3</a>
-    <a href="StageFour.html" class="w3-bar-item w3-button w3-padding-large w3-white">Stage 4</a>
+    <a href="StageThree.html" class="w3-bar-item w3-button w3-padding-large w3-white">Stage 3</a>
+    <a href="StageFour.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Stage 4</a>
     <a href="StageFive.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Stage 5</a>
   </div>
 
@@ -48,13 +48,11 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 <div class="w3-row-padding w3-padding-64 w3-container">
   <div class="w3-content">
     <div class="w3-twothird">
-      <h1>Stage Four Summary</h1>
-      <h5 class="w3-padding-32">The main tasks for Stage Four were to create a high fidelity prototype using Adobe XD and perform heuristic evaluation.</h5>
+      <h1>Stage Three Summary</h1>
+      <h5 class="w3-padding-32">The main tasks for Stage Three were to create a low-fidelity prototype using Balsamiq inspired by group sketches, affinity diagrams and a storyboard.</h5>
 
-      <p class="w3-text-grey">Over the course of our heuristic evaluations we were able to review our overall design and learn about what we did and did not do right. Both evaluators had fairly similar results, finding that Grocery Getters was able to satisfy all of the heuristics to at least some extent. Our app’s design is quite streamlined and provides all the necessary information for a new user to operate it immediately and intuitively. The UI is not cluttered by excess information and clearly displays the actions a user is able perform. Not much error checking was implemented as Grocery Getters is so simple that there is barely any room to make any on the user’s end. In terms of improvement, some icons and texts should be more obvious for the user so those issues were purely cosmetic and could be adjusted. Overall, we determined that we had a fairly minimalist design that could easily be used by any English speaker who has experience using apps.</p>
-    </div>
-    <div class="project-image">
-        <img src="images/AdobeXD.png" />
+      <p class="w3-text-grey"></p>
+      <embed src="images/All_Sketches.pdf" width="800px" height="2100px" />
     </div>
   </div>
 
@@ -67,14 +65,14 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
     </div>
 
     <div class="w3-twothird">
-      <h1>High Fidelity Demo</h1>
+      <h1>Low Fidelity Demo</h1>
       <video width="320" height="240" controls>
-  <source src="images/HiFiDemo_TeamD.mp4" type="video/mp4">
+  <source src="images/Lo-Fi_Prototype_TeamD.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video>
     </div>
     <p class="w3-text-grey">This is the link to our full presentation:</p>
-    <a href="https://uofc.sharepoint.com/:p:/s/GrpO365_Science_ComputerScience_CPSC481F2020-TeamD/Ec57P7L7sqhJi0YvI42_BMsB_HcwKzd3NP5J70GLcSQl9g?e=5xMLZQ">Stage Four Presentation</a>
+    <a href="https://uofc-my.sharepoint.com/:p:/g/personal/parker_wong_ucalgary_ca/EdzlRzsYcI9HpBPt4YqqbSEB7uiAw2Ez-9liZrk12vKRfQ?e=2ZcnTO">Stage Three Presentation</a>
   </div>
 </div>
 
@@ -83,7 +81,7 @@ Your browser does not support the video tag.
     <div class="w3-twothird">
       <h1>Reflection</h1>
 
-      <p class="w3-text-grey">The overall heuristic evaluation process went smoothly for ensuring that none of the rule of thumbs were violated for our mobile application. The evaluators were able to navigate through the application without any issues and provided the proper feedback needed for the reviewers. In order to help us determine more errors or faults within our application, having a slightly bigger team would have helped us more for the evaluation process. Ideally, having at least five people evaluate the application would be more beneficial in finding more faults but we were limited to only two evaluators and two reviewers. In turn, this made it slightly difficult for the reviewing end to fix potential issues because not that many were pointed out. If we were to do the heuristic evaluation again, having at least five evaluators and at least three reviewers would make the process more realistic.</p>
+      <p class="w3-text-grey">For Stage Three, we started by meeting up as a group to brainstorm and sketch about the features and implementations of the Grocery Getters app. This proved to be quite useful as it allowed us to come up with a large variety of ideas which helped in visualizing and getting a better understanding of the project. From those sketches, we were able to successfully create an affinity diagram to better categorize all our ideas and decide which would be the most significant towards the app’s purpose. Although it took a few tries and the help of Hessam to explain the process, we were able to create an affinity diagram to narrow down our app’s most important functions in order to make a detailed storyboard. The storyboard went well as we had a much clearer understanding of how we wanted Grocery Getters to operate at that point. Making a storyboard allowed us to better visualize what steps a standard user would go through in order to operate a key feature of our app: creating a grocery list and adding an item to it. From there, we were able to develop a working Low-Fidelity prototype for the Grocery Getters app to simulate how it would function. Finally, we went over a cognitive evaluation of all our user tasks in which we figured out how easily the average users would operate the app. This evaluation in turn helped to refine our prototype as well. Overall, almost everyone in our group participated which made the entire ideation process successful in helping us plan and design our app. The only thing that we would do differently would be to have everyone make more sketches due to the lack of participation of one of our members and to make a more detailed affinity diagram. Doing these things better would have allowed us to get a bigger sample size of ideas to work with and analyze better.</p>
     </div>
   </div>
 </div>
