--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
 
                         <h3>Stage 1</h3>
                         <p>
-                            For Stage One, we signed our team contract and proposed three feasible ideas for a UI. We narrowed it down to three mobile applications: Grocery List, Jet Lag Adapt, and Water Watchers. The PDF for the proposals are attached below.
+                            For Stage One, we signed our team contract and proposed three feasible ideas for a UI. We narrowed it down to three mobile applications: Grocery List, Jet Lag Adapt, and Water Watchers. Please follow the link for the report.
                         </p>
-                        <a href="Ideas.pdf" download>Team Proposals</a>
+                        <a href="StageOne.html">Stage One Details</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -101,9 +101,9 @@
                     <div class="project-info">
                         <h3>Stage 2</h3>
                         <p>
-                            For Stage Two, we narrowed down the project idea to the Grocery Getters mobile application. We performed user research by using three unique IDEO cards. The report below goes through in detail about the user research and the defined user tasks for the application.
+                            For Stage Two, we narrowed down the project idea to the Grocery Getters mobile application. We performed user research by using three unique IDEO cards. Please follow the link for the full report.
                         </p>
-                        <a href="https://github.com/parkercodewong/cpsc481_teamD/blob/Stage_Two/Stage%202.pdf" download>Stage 2 Report</a>
+                        <a href="StageTwo.html">Stage 2 Details</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -117,12 +117,10 @@
                         <h3>Stage 3</h3>
                         <p>
                             For Stage Three, we successfully created a Lo-Fi prototype of the Grocery Getters mobile application in which we used various ideation methods such as sketching, affinity diagrams, and storyboards to help us get inspired.
-                            The report below goes in detail about our learning process since Stage Two. We also have the link to our presentation provided as well.
-
+                            The report goes in detail about our learning process since Stage Two.
                         </p>
-                          <a href="https://github.com/parkercodewong/cpsc481_teamD/blob/Stage_Three/Stage_Three_Report_TeamD.pdf">Stage 3 Report</a>
-                          <p></p>
-                          <a href="https://uofc-my.sharepoint.com/:p:/g/personal/parker_wong_ucalgary_ca/EdzlRzsYcI9HpBPt4YqqbSEB7uiAw2Ez-9liZrk12vKRfQ?e=2ZcnTO">Video Presentation</a>
+                          <a href="StageThree.html">Stage 3 Details</a>
+
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -136,7 +134,24 @@
                         <h3>Stage 4</h3>
                         <p>
                             The main tasks for Stage Four were to create a high fidelity prototype using Adobe XD and perform heuristic evaluation. We had two members of the group be the evaluators and two others be the reviewers for this process. By doing this
-                            we learned about the rules of thumb and how well our mobile app was performing when looking at these rules. Please follow the link for more details on this stage.
+                            we learned about the rules of thumb and how well our mobile app was performing when looking at these rules.
+                        </p>
+                      </p>
+                          <a href="StageFour.html">Stage 4 Details</a>
+                          <p>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/number-five.png" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Stage 5</h3>
+                        <p>
+                            The main tasks for Stage Five were to refine the high fidelity prototype created in Stage four and protoype all available user tasks vertically. We also had to pay close attention to the detail of the UI and UX design aspects. This protoype is as close to a real implementation as possible.
                         </p>
                       </p>
                           <a href="StageFour.html">Stage 4 Details</a>
