--- a/StageFive.html
+++ b/StageFive.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>Stage Four</title>
+<title>Stage Five</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -23,8 +23,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
     <a href="StageOne.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Stage 1</a>
     <a href="StageTwo.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Stage 2</a>
     <a href="StageThree.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Stage 3</a>
-    <a href="StageFour.html" class="w3-bar-item w3-button w3-padding-large w3-white">Stage 4</a>
-    <a href="StageFive.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Stage 5</a>
+    <a href="StageFour.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Stage 4</a>
+    <a href="StageFive.html" class="w3-bar-item w3-button w3-padding-large w3-white">Stage 5</a>
   </div>
 
   <!-- Navbar on small screens -->
@@ -48,13 +48,12 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 <div class="w3-row-padding w3-padding-64 w3-container">
   <div class="w3-content">
     <div class="w3-twothird">
-      <h1>Stage Four Summary</h1>
-      <h5 class="w3-padding-32">The main tasks for Stage Four were to create a high fidelity prototype using Adobe XD and perform heuristic evaluation.</h5>
+      <h1>Stage Five Summary</h1>
+      <h5 class="w3-padding-32">For this stage, we had to reconsider several design aspects for our original high-fidelity prototype and finish prototyping the remaining user tasks. For example, our colour scheme was too linear as we used the same tone of green for the majority of the pages which made the design look rather boring. We also had to adjust some of the icons as there was some overlap between some tasks.</h5>
 
-      <p class="w3-text-grey">Over the course of our heuristic evaluations we were able to review our overall design and learn about what we did and did not do right. Both evaluators had fairly similar results, finding that Grocery Getters was able to satisfy all of the heuristics to at least some extent. Our app’s design is quite streamlined and provides all the necessary information for a new user to operate it immediately and intuitively. The UI is not cluttered by excess information and clearly displays the actions a user is able perform. Not much error checking was implemented as Grocery Getters is so simple that there is barely any room to make any on the user’s end. In terms of improvement, some icons and texts should be more obvious for the user so those issues were purely cosmetic and could be adjusted. Overall, we determined that we had a fairly minimalist design that could easily be used by any English speaker who has experience using apps.</p>
     </div>
     <div class="project-image">
-        <img src="images/AdobeXD.png" />
+        <img src="#" />
     </div>
   </div>
 
@@ -67,23 +66,23 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
     </div>
 
     <div class="w3-twothird">
-      <h1>High Fidelity Demo</h1>
+      <h1>Final High Fidelity Demo</h1>
       <video width="320" height="240" controls>
-  <source src="images/HiFiDemo_TeamD.mp4" type="video/mp4">
+  <source src="#" type="video/mp4">
 Your browser does not support the video tag.
 </video>
     </div>
-    <p class="w3-text-grey">This is the link to our full presentation:</p>
-    <a href="https://uofc.sharepoint.com/:p:/s/GrpO365_Science_ComputerScience_CPSC481F2020-TeamD/Ec57P7L7sqhJi0YvI42_BMsB_HcwKzd3NP5J70GLcSQl9g?e=5xMLZQ">Stage Four Presentation</a>
+    <p class="w3-text-grey">This is an alternative link to the video:</p>
+    <a href="#">High Fidelity Prototype</a>
   </div>
 </div>
 
 <div class="w3-row-padding w3-padding-64 w3-container">
   <div class="w3-content">
     <div class="w3-twothird">
-      <h1>Reflection</h1>
+      <h1>End of Journey</h1>
 
-      <p class="w3-text-grey">The overall heuristic evaluation process went smoothly for ensuring that none of the rule of thumbs were violated for our mobile application. The evaluators were able to navigate through the application without any issues and provided the proper feedback needed for the reviewers. In order to help us determine more errors or faults within our application, having a slightly bigger team would have helped us more for the evaluation process. Ideally, having at least five people evaluate the application would be more beneficial in finding more faults but we were limited to only two evaluators and two reviewers. In turn, this made it slightly difficult for the reviewing end to fix potential issues because not that many were pointed out. If we were to do the heuristic evaluation again, having at least five evaluators and at least three reviewers would make the process more realistic.</p>
+      <p class="w3-text-grey"></p>
     </div>
   </div>
 </div>
