Added links for Stage Five

--- a/StageFive.html
+++ b/StageFive.html
@@ -52,6 +52,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
       <h5 class="w3-padding-32">For this stage, we had to reconsider several design aspects for our original high-fidelity prototype and finish prototyping the remaining user tasks. For example, our colour scheme was too linear as we used the same tone of green for the majority of the pages which made the design look rather boring. We also had to adjust some of the icons as there was some overlap between some tasks.</h5>
 
     </div>
+    <embed src="images/Stage_5.pdf" width="800px" height="2100px" />
     <div class="project-image">
         <img src="#" />
     </div>
@@ -68,7 +69,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
     <div class="w3-twothird">
       <h1>Final High Fidelity Demo</h1>
       <video width="320" height="240" controls>
-  <source src="#" type="video/mp4">
+  <source src="images/StageFiveDemo_TeamD.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video>
     </div>
@@ -81,8 +82,8 @@ Your browser does not support the video tag.
   <div class="w3-content">
     <div class="w3-twothird">
       <h1>End of Journey</h1>
+      <p class="w3-text-grey">Our choice for designing and prototyping the Grocery Getters application was not the most unique idea but it still provided us a surplus of learning experience for UI and UX design. We learned quite quickly that there is more to designing a mobile application than simply sketching it immediately and spontaneously attempting trial and error. In terms of the decision making and quality during all five stages of the project, we believe that we performed the best we could for this project given the challenges of remote classes and losing a member halfway through the course. Overall, the process of designing Grocery Getters provided Team D with a wealth of knowledge and experience which we hope to apply in case we have to work with HCI in the future.</p>
 
-      <p class="w3-text-grey"></p>
     </div>
   </div>
 </div>
