--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <div id="lead-content">
             <h1>Grocery Getters</h1>
             <h2>CPSC 481 - Team D</h2>
+            <h3>Team Members - Gabriel Martinez, Matthew Tamkee, Duncan Tham, Parker Wong</h3>
 
         </div>
 
@@ -78,7 +79,7 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/number-one.png" />
+                        <img src="images/grocery.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -87,7 +88,7 @@
                         <p>
                             For Stage One, we signed our team contract and proposed three feasible ideas for a UI. We narrowed it down to three mobile applications: Grocery List, Jet Lag Adapt, and Water Watchers. Please follow the link for the report.
                         </p>
-                        <a href="StageOne.html">Stage One Details</a>
+                        <a href="StageOne.html">Stage 1 Details</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -95,7 +96,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/number-two.png" />
+                        <img src="images/ideo.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -110,7 +111,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/number-three.png" />
+                        <img src="images/balsamiq.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -127,7 +128,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/number-four.png" />
+                        <img src="images/adobexd_logo.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -145,7 +146,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/number-five.png" />
+                        <img src="images/done.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -154,7 +155,7 @@
                             The main tasks for Stage Five were to refine the high fidelity prototype created in Stage four and protoype all available user tasks vertically. We also had to pay close attention to the detail of the UI and UX design aspects. This protoype is as close to a real implementation as possible.
                         </p>
                       </p>
-                          <a href="StageFour.html">Stage 4 Details</a>
+                          <a href="StageFive.html">Stage 5 Details</a>
                           <p>
                     </div>
                     <!-- End .project-info -->
