Added link to Stage Five demo

--- a/StageFive.html
+++ b/StageFive.html
@@ -74,7 +74,7 @@ Your browser does not support the video tag.
 </video>
     </div>
     <p class="w3-text-grey">This is an alternative link to the video:</p>
-    <a href="#">High Fidelity Prototype</a>
+    <a href="https://uofc.sharepoint.com/:v:/s/GrpO365_Science_ComputerScience_CPSC481F2020-TeamD/ERMrMlA0VadJpHM4fGz-D-8B0c5jjww77_F13rIp92--Sg?e=vKeSbB">High Fidelity Prototype</a>
   </div>
 </div>
 
