--- a/StageFive.html
+++ b/StageFive.html
@@ -69,7 +69,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
     <div class="w3-twothird">
       <h1>Final High Fidelity Demo</h1>
       <video width="320" height="240" controls>
-  <source src="images/StageFiveDemo_TeamD.mp4" type="video/mp4">
+  <source src="https://parkercodewong.github.io/cpsc481_teamD/images/StageFiveDemo_TeamD.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video>
     </div>
